@@ -833,6 +833,11 @@ linkend="method-gtkwidget--class-path">class_path</link></methodname>
 	<methodname><link linkend="method-gtkwidget--remove-mnemonic-label">remove_mnemonic_label</link></methodname>
 	<methodparam><parameter>label</parameter></methodparam>
       </methodsynopsis>
+      <methodsynopsis language="python">
+	<methodname><link
+linkend="method-gtkwidget--menu-get-for-attach-widget">menu_get_for_attach_widget</link></methodname>
+	<methodparam></methodparam>
+      </methodsynopsis>
     </classsynopsis>
 
 <programlisting>
@@ -5895,6 +5900,29 @@ linkend="method-gtkwidget--list-mnemonic-labels"><methodname>list_mnemonic_label
 method). <parameter>label</parameter> must have previously been added to the
 list with the <link
 linkend="method-gtkwidget--add-mnemonic-label"><methodname>add_mnemonic_label()</methodname></link>.</para>
+
+    </refsect2>
+
+    <refsect2 id="method-gtkwidget--menu-get-for-attach-widget">
+      <title>gtk.Widget.menu_get_for_attach_widget</title>
+
+      <programlisting><methodsynopsis language="python">
+	  <methodname>menu_get_for_attach_widget</methodname>
+	  <methodparam><parameter role="keyword"></parameter></methodparam>
+	</methodsynopsis></programlisting>
+      <variablelist>
+	<varlistentry>
+	  <term><emphasis>Returns</emphasis>&nbsp;:</term>
+	  <listitem><simpara>a list of menus attached to this widget.</simpara></listitem>
+	</varlistentry>
+      </variablelist>
+
+      <note>
+	<para>This method is available in PyGTK 2.6 and above.</para>
+      </note>
+
+      <para>The <methodname>menu_get_for_attach_widget</methodname>() method
+returns a list of the menus that are attached to this widget.</para>
 
     </refsect2>
 
