@@ -1,5 +1,7 @@
 2004-11-14  John Finlay  <finlay@moeraki.com>
 
+	* pygtk-gtkwidget.xml (menu_get_for_attach_widget): Add description.
+
 	* pygtk-gtkmenu.xml ("tearoff-state") Add description.
 
 	* pygtk-gtklabel.xml (Description): Update.
